1 file modified, 1 added, 2 deleted

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <button id="generate-btn">Generate QR Code</button>
       <div id="qrcode"></div>
     </div>
-    <script src="./QR.js"></script>
+    <script src="./qr.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
